Fix sidebar z-index issue

--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 body {
+	isolation: isolate;
 	@apply text-neutral-900;
 }
 
